tests/snapshots/table_snapshots__team_show_lists_members_and_pending_invites.snap
---
source: tests/table_snapshots.rs
expression: out
---
FIELD          VALUE   
id             7       
name           core    
default_role   viewer  
members_count  2       

MEMBERS (2)
EMAIL              NAME           ROLE    STATUS  
alice@example.com  Alice Example  admin   active  
bob@example.com    —              viewer  active  

PENDING_INVITES (1)
EMAIL              NAME  ROLE    STATUS   
carol@example.com  —     viewer  pending
