tests/snapshots/table_snapshots__team_show_without_members_renders_fields_only.snap
---
source: tests/table_snapshots.rs
expression: out
---
FIELD          VALUE  
id             7      
name           core   
default_role   —      
members_count  —
