tests/snapshots/table_snapshots__usage_by_method_table_includes_chain_and_network.snap
---
source: tests/table_snapshots.rs
expression: out
---
METHOD          CHAIN   NETWORK  CREDITS  ARCHIVE  
eth_call        eth     mainnet  900      ✗        
getBlockHeight  solana  mainnet  300      —
