tests/snapshots/table_snapshots__usage_by_tag_table_includes_requests.snap
---
source: tests/table_snapshots.rs
expression: out
---
TAG_ID  LABEL     CREDITS  REQUESTS  
1       prod      1000     420       
—       untagged  200      80
