tests/snapshots/table_snapshots__usage_summary_table_shows_overages_and_window.snap
---
source: tests/table_snapshots.rs
expression: out
---
FIELD              VALUE                 
credits_used       1200                  
credits_remaining  8800                  
limit              10000                 
overages           0                     
start_time         2026-01-01T00:00:00Z  
end_time           2026-02-01T00:00:00Z
