tests/snapshots/table_snapshots__x402_supported_networks_table_lists_slugs.snap
---
source: tests/table_snapshots.rs
expression: "discovery_stdout(&server, \"x402\", \"supported-networks\").await"
---
NETWORK           
base-sepolia      
ethereum-mainnet  
solana-devnet
