tests/snapshots/table_snapshots__x402_supported_networks_table_shows_two_sections.snap
---
source: tests/table_snapshots.rs
expression: "supported_networks_stdout(&server, \"x402\").await"
---
Callable networks (make x402-paid RPC calls to these):
NETWORK           
base-sepolia      
ethereum-mainnet  
solana-devnet     

Accepted currencies (pay for calls with one of these):
NETWORK       ASSET  ADDRESS                                     
base-sepolia  USDC   0x036CbD53842c5426634e7929541eC2318f3dCF7e
