tests/snapshots/table_snapshots__x402_supported_payments_table_lists_options.snap
---
source: tests/table_snapshots.rs
expression: "discovery_stdout(&server, \"x402\", \"supported-payments\").await"
---
NETWORK       ASSET  ADDRESS                                     
base-sepolia  USDC   0x036CbD53842c5426634e7929541eC2318f3dCF7e
